# sidekiq-rs

./: .gitignore  Cargo.toml  Makefile  README.md  search-index.js
examples/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/ops/: trait.Deref.js
implementors/error_chain/: trait.ChainedError.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/sidekiq/: trait.JobHandler.js
implementors/std/error/: trait.Error.js
ruby/: push.rb  webui.ru
ruby/lib/worker/: dummy.rb  error.rb  exception.rb  panic.rb  printer.rb
sidekiq/: JobHandlerResult.t.html  JobSuccessType.t.html  MiddleWare.t.html  MiddleWareResult.t.html  RedisPool.t.html  RetryInfo.t.html  enum.JobSuccessType.html  fn.error_handler.html  fn.panic_handler.html  fn.peek_middleware.html  fn.printer_handler.html  fn.retry_middleware.html  fn.time_elapse_middleware.html  index.html  retry_middleware.v.html  sidebar-items.js  struct.Job.html  struct.RetryInfo.html  struct.SidekiqServer.html  trait.JobHandler.html  trait.MiddleWare.html  type.JobHandlerResult.html  type.MiddleWareResult.html  type.NextFunc.html  type.RedisPool.html
sidekiq/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
sidekiq/job/: struct.Job.html  struct.RetryInfo.html
sidekiq/job_handler/: JobHandler.t.html  error_handler.v.html  fn.error_handler.html  fn.panic_handler.html  fn.printer_handler.html  printer_handler.v.html  trait.JobHandler.html  type.JobHandlerResult.html
sidekiq/middleware/: NextFunc.t.html  fn.peek_middleware.html  fn.retry_middleware.html  fn.time_elapse_middleware.html  peek_middleware.v.html  time_elapse_middleware.v.html  trait.MiddleWare.html  type.MiddleWareResult.html  type.NextFunc.html
sidekiq/server/: SidekiqServer.t.html  struct.SidekiqServer.html
src/: errors.rs  job.rs  job_agent.rs  job_handler.rs  lib.rs  middleware.rs  reporter.rs  server.rs  utils.rs  worker.rs
src/sidekiq/: errors.rs.html  job.rs.html  job_handler.rs.html  lib.rs.html  middleware.rs.html  server.rs.html  utils.rs.html  worker.rs.html
