[package]
authors = ["Wu Young <doomsplayer@gmail.com>"]
description = "Sidekiq compatible server in Rust"
homepage = "https://github.com/doomsplayer/sidekiq-rs"
license = "MIT"
name = "sidekiq-rs"
repository = "https://github.com/doomsplayer/sidekiq-rs"
version = "0.1.2"

[dependencies]
chan = "0.1.18"
chan-signal = "0.1.6"
chrono = "0.2.25"
docopt = "0.6.82"
env_logger = "0.3.4"
error-chain = "0.5.0"
json = "0.10.2"
libc = "0.2.15"
log = "0.3.6"
r2d2 = "0.7.0"
r2d2_redis = "0.4.0"
rand = "0.3.14"
random_choice = "0.3.0"
redis = "0.6.0"
rustc-serialize = "0.3.19"
serde = "0.8"
serde_json = "0.8"
thread-id = "2.0.0"
threadpool = "1.0.0"

[lib]
name = "sidekiq"
